[workspace]
members = [
    "arr",
    "float_math",
    "function",
    "guessing_game",
    "loops",
    "tuple",
    "convert_temperature",
    "ownership",
    "ref_borrow",
    "slice",
    "struct_user",
    "tuple_struct",
    "rectangles",
    "enums",
    "options",
    "restaurant",
    "vecs",
    "strings",
    "hashmaps",
    "generics",
    "summary_trait",
    "lifetime",
    "tests",
    "minigrep",
]
